# cunzhi-cli

./: .gitignore  README.md
cli/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.md  install.ps1  install.sh  mcp_config.json  test_mcp_client.py  test_ui_request.json  uninstall.sh  verify-installation.sh
cli/src/: lib.rs  main.rs
cli/src/cli/: commands.rs  config.rs  init.rs  interactive.rs  mcp.rs  mod.rs  server.rs
cli/src/config/: mod.rs  settings.rs  storage.rs
cli/src/mcp/: commands.rs  config.rs  mod.rs  server.rs  types.rs
cli/src/mcp/handlers/: popup.rs  response.rs
cli/src/mcp/tools/interaction/: mcp.rs
cli/src/mcp/tools/memory/: manager.rs  mcp.rs
cli/src/mcp/utils/: common.rs  errors.rs
cli/src/utils/: cli_helpers.rs  error_handler.rs  logger.rs  mod.rs  terminal_launcher.rs  ui.rs
cli/templates/: README.md  basic.json  full.json
cli/tests/: functional_tests.rs  integration_tests.rs  unit_tests.rs
cunzhi-origin/: Cargo.toml
